--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,3 +2,12 @@
     max-width: 400px;
     margin: 0 auto;
 }
+
+.tab-container{
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+a{
+    outline: 0;
+}
